[gd_scene load_steps=7 format=3 uid="uid://desrpjm8u2335"]

[ext_resource type="Script" path="res://scripts/character_body_2d.gd" id="1_0ax64"]
[ext_resource type="Script" path="res://scripts/ai_controller_2d.gd" id="2_qj1il"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ch85w"]
size = Vector2(55, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2of56"]
size = Vector2(20, 10.7143)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2mjya"]
size = Vector2(72, 76)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0y8rl"]
size = Vector2(41, 342)

[node name="Main" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(-30, -11)
script = ExtResource("1_0ax64")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("RectangleShape2D_ch85w")

[node name="AIController2D" type="Node2D" parent="CharacterBody2D"]
script = ExtResource("2_qj1il")
control_mode = null
onnx_model_path = null
reset_after = null
expert_demo_save_path = null
action_repeat = null
policy_name = null

[node name="ColorRect" type="ColorRect" parent="CharacterBody2D"]
offset_left = -20.0
offset_top = -19.0
offset_right = 20.0
offset_bottom = 21.0

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(0, 29)
scale = Vector2(100, 14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(0, 4.64286)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_2of56")

[node name="ColorRect" type="ColorRect" parent="Floor"]
offset_left = -10.0
offset_right = 10.0
offset_bottom = 12.0

[node name="Target" type="Area2D" parent="."]
position = Vector2(470, -29)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target"]
shape = SubResource("RectangleShape2D_2mjya")

[node name="ColorRect" type="ColorRect" parent="Target"]
offset_left = -20.0
offset_top = -17.0
offset_right = 20.0
offset_bottom = 23.0
color = Color(0.372549, 1, 0.564706, 1)
metadata/_edit_use_anchors_ = true

[node name="Wall" type="Area2D" parent="."]
position = Vector2(-558, -153)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
shape = SubResource("RectangleShape2D_0y8rl")

[node name="Wall2" type="Area2D" parent="."]
position = Vector2(554, -153)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
shape = SubResource("RectangleShape2D_0y8rl")

[connection signal="body_entered" from="Target" to="CharacterBody2D" method="_on_target_body_entered"]
[connection signal="body_entered" from="Wall" to="CharacterBody2D" method="_on_wall_body_entered"]
[connection signal="body_entered" from="Wall2" to="CharacterBody2D" method="_on_wall_body_entered"]
